# golr

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: console_app.rs  display.rs  main.rs  parser.rs  piston_app.rs  util.rs  world.rs
src/gardens/: gosper.txt  planer.txt
