[package]
name = "golr"
version = "0.1.0"
authors = [
    "Sergey Pilyavskiy <pill.sv0@gmail.com>",
    "Pavel Chernykh <pavel.v.chernykh@gmail.com>"
]

[dependencies]
rand = "0.3"
time = "0.1"
rustc-serialize = "*"
docopt = "*"
itertools = "*"
unicode-segmentation = "0.1.0"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"
[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"
[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window.git"
[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"
