[package]
name = "golr"
version = "0.1.0"
authors = [
    "Sergey Pilyavskiy <pill.sv0@gmail.com>",
    "Pavel Chernykh <pavel.v.chernykh@gmail.com>"
]

[dependencies]
rand = "0.3"
time = "0.1"
rustc-serialize = "*"
docopt = "*"
itertools = "*"
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"

